--- a/src/assets/style/common/common.less
+++ b/src/assets/style/common/common.less
@@ -16,3 +16,22 @@ body {
 //     display: table-cell;
 //     vertical-align: middle;
 // }
+
+.fullsize {
+    width: 100%;
+    height: 100%;
+}
+
+.abs-fullsize {
+    .fullsize;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.rel-fullsize {
+    .fullsize;
+    
+    position: relative;
+}
