--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -2,6 +2,7 @@
 
 // 系统
 @import './common/keyframes.less'; // 动画
+@import './common/common.less'; // 动画
 
 // ------------------------------------初始化全局样式-----------------------------------------
 html, body {
