--- a/src/assets/style/common/common.less
+++ b/src/assets/style/common/common.less
@@ -35,3 +35,9 @@ body {
     
     position: relative;
 }
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
