更新修改插件以及规则

--- a/src/assets/style/config.less
+++ b/src/assets/style/config.less
@@ -5,3 +5,6 @@
 @g-fontSize: 30px;
 @g-baseUrl: '..';   // 全局地址前缀
 @g-localUrl: '..';  // 本地地址前缀，用于less的image-width等
+
+// 状态栏高度
+@g-barHeight: 75px;
