--- a/src/assets/style/common/transition.less
+++ b/src/assets/style/common/transition.less
@@ -1,3 +1,7 @@
+@import '../config.less';
+
+// vue 动画
+// -------------------------------------------------
 .slide-down-enter, .slide-down-leave-to {
     transform: translateY(-100%);
 }
