--- a/src/assets/style/common/common.less
+++ b/src/assets/style/common/common.less
@@ -41,3 +41,11 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
+}
