--- a/src/assets/style/common/transition.less
+++ b/src/assets/style/common/transition.less
@@ -2,6 +2,7 @@
 
 // vue 动画
 // -------------------------------------------------
+
 .slide-down-enter, .slide-down-leave-to {
     transform: translateY(-100%);
 }
@@ -10,16 +11,22 @@
     transform: translateY(100%);
 }
 
-.slide-down-enter-to,
-.slide-down-leave,
-.slide-up-enter-to,
-.slide-up-leave {
+.slide-down-enter-to,.slide-down-leave,.slide-up-enter-to,.slide-up-leave {
     transform: translateY(0);
 }
 
-.slide-down-enter-active,
-.slide-down-leave-active,
-.slide-up-enter-active,
-.slide-up-leave-active {
+.slide-down-enter-active,.slide-down-leave-active,.slide-up-enter-active,.slide-up-leave-active {
+    transition: all 300ms linear;
+}
+
+.opacity-enter,.opacity-leave-to {
+    opacity: 0;
+}
+
+.opacity-leave,.opacity-enter.to {
+    opacity: 1;
+}
+
+.opacity-enter-active,.opacity-leave-active {
     transition: all 300ms linear;
 }
