--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -1,9 +1,9 @@
-﻿@import './config.less'; // 配置变量
+@import './config.less';
 
 // 系统
-@import './common/keyframes.less'; // 动画
-@import './common/common.less'; // 通用
-@import './common/transition.less'; // vue动画
+@import './common/keyframes.less';
+@import './common/common.less';
+@import './common/transition.less';
 
 // ------------------------------------初始化全局样式-----------------------------------------
 html, body {
