--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -4,6 +4,7 @@
 @import './common/keyframes.less';
 @import './common/common.less';
 @import './common/transition.less';
+@import './usr/book.less';
 
 // ------------------------------------初始化全局样式-----------------------------------------
 html, body {
