--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -17,6 +17,9 @@ body {
     background-color: @g-backgroundColor;
     color: @g-color;
     overflow: hidden;
+    // -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
 
     &.lock {
         overflow: hidden;
